--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,22 +72,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "1858cb2a-d96d-45af-be10-4e43a09496b0",
+        "outputId": "3c200ced-bd38-498f-e6a3-bdc30296346c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 34
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -105,14 +105,14 @@
         "Y  = data.iloc[:,8].values\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 21,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RbQx30WIGlcX",
-        "outputId": "7372ab55-29d4-4a18-f1b6-6eb8da7ab7c2",
+        "outputId": "2653d0b3-7929-48f9-db16-587206d48f7b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 254
@@ -123,7 +123,7 @@
         "#data.describe()\n",
         "data"
       ],
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -263,7 +263,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 4
         }
       ]
     },
@@ -271,7 +271,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "2TE6QtHbPGlm",
-        "outputId": "8d7b5ec3-7d9b-4423-fb46-4dffffe74de4",
+        "outputId": "6aa408b9-c03b-417d-cf9c-b95c05a78295",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -297,7 +297,7 @@
         "print('Precisión Modelo Regresión Logística')\n",
         "print(logreg.score(x_train,y_train))\n"
       ],
-      "execution_count": 22,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "lM440GPiUC7w",
-        "outputId": "dbca6600-82c6-479b-9745-177408d70468",
+        "outputId": "199a442e-446f-4e4c-aa7b-6981ca3cbbd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 302
@@ -333,7 +333,7 @@
         "print('Resultado predicción entrenamiento')\n",
         "print(pd.DataFrame(y_predic_train_m1))"
       ],
-      "execution_count": 23,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +364,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "iod3jZg-vyXg",
-        "outputId": "c84d8c80-a1fc-44f0-c285-b1b14c0a95eb",
+        "outputId": "a6888da1-315b-4504-a814-13ea7e657b38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -378,7 +378,7 @@
         "plt.title('Bajas clientes con antiguedad a 3 meses')\n",
         "plt.show()"
       ],
-      "execution_count": 24,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -398,7 +398,107 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l3L8HXGeXEf9"
+        "id": "YZFlWrrEUyue"
+      },
+      "source": [
+        "x_mes=[]\n",
+        "\n",
+        "for _ in list(range(8,13)):\n",
+        "  x_mes.append(_)\n"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5sL7BY6nWkqP",
+        "outputId": "a7c3f96a-9cd9-4af6-88fc-673c0d8ddeee",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        }
+      },
+      "source": [
+        "pd.DataFrame(x_mes[:])"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    0\n",
+              "0   8\n",
+              "1   9\n",
+              "2  10\n",
+              "3  11\n",
+              "4  12"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l3L8HXGeXEf9",
+        "outputId": "2412d1ba-243e-4e95-9d60-82ca0c92965c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 438
+        }
       },
       "source": [
         "#Guardamos los resultados\n",
@@ -406,10 +506,33 @@
         "\n",
         "for _ in list(range(len(y_predic_train_m1))):\n",
         "  concat_y1.append(y_predic_train_m1[_])\n",
-        "  concat_x1.append(x_train[_])\n"
+        "  concat_x1.append(x_train[_])\n",
+        "\n",
+        "concat_p_x1, concat_p_y1 = [],[]\n",
+        "aux_mes=0\n",
+        "for _ in list(range(8,13)):\n",
+        "  y_predic_mes = logreg.predict((x_mes[aux_mes]))\n",
+        "  print(y_predic_mes)\n",
+        "  print(x_mes[aux_mes])\n",
+        "  aux_mes=aux_mes+1\n"
       ],
-      "execution_count": 25,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-49-4db6cd52cc02>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0maux_mes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m13\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m   \u001b[0my_predic_mes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_mes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maux_mes\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_predic_mes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_mes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maux_mes\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_base.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    291\u001b[0m             \u001b[0mPredicted\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0mper\u001b[0m \u001b[0msample\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    292\u001b[0m         \"\"\"\n\u001b[0;32m--> 293\u001b[0;31m         \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    294\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m             \u001b[0mindices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_base.py\u001b[0m in \u001b[0;36mdecision_function\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    266\u001b[0m         \u001b[0mcheck_is_fitted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    267\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 268\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    269\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    270\u001b[0m         \u001b[0mn_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    547\u001b[0m                     \u001b[0;34m\"Reshape your data either using array.reshape(-1, 1) if \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    548\u001b[0m                     \u001b[0;34m\"your data has a single feature or array.reshape(1, -1) \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 549\u001b[0;31m                     \"if it contains a single sample.\".format(array))\n\u001b[0m\u001b[1;32m    550\u001b[0m             \u001b[0;31m# If input is 1D raise error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    551\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Expected 2D array, got scalar array instead:\narray=8.\nReshape your data either using array.reshape(-1, 1) if your data has a single feature or array.reshape(1, -1) if it contains a single sample."
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1344,7 +1467,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "_YYSb_HU5WJr",
-        "outputId": "7a4897e7-0079-46a7-96c6-2d44ad7e0a34",
+        "outputId": "9a2535db-2843-48d7-ef56-7b0e6cc5592b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1353,19 +1476,19 @@
       "source": [
         "eje_y"
       ],
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1502, 1504, 1157, 1242, 1031, 1181, 1507, 2435, 2435, 1031, 1240, 1016]"
+              "[1299, 1494, 1345, 1433, 1155, 1188, 1492]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 200
+          "execution_count": 52
         }
       ]
     },
@@ -1373,7 +1496,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "9dOPjck_5bS5",
-        "outputId": "006eebef-480b-48da-e6f9-ed6793c29683",
+        "outputId": "4c233f37-ade5-4e92-93b9-10c7737b820a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1382,19 +1505,48 @@
       "source": [
         "eje_x"
       ],
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1, 2, 4, 6, 9, 5, 3, 11, 12, 8, 7, 10]"
+              "[6, 2, 3, 7, 4, 5, 1]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 201
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lPPveE0QAxDf",
+        "outputId": "7a200463-811f-469d-fd02-b99f07410fa9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "quede aqui, guardar en cada agrupacionm los datos de la predicciion y listo\n",
+        "x_mes=[]\n",
+        "x_mes.append(4)\n",
+        " \n",
+        "y_predic_mes = logreg.predict([x_mes])\n",
+        "print(y_predic_mes)"
+      ],
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[29]\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
