--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,22 +72,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "66cdd91e-b63b-4b15-aa01-12b7fae33358",
+        "outputId": "7bf31210-6bee-44ae-911f-48891b32aeb7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 34
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -99,31 +99,25 @@
         "id": "0JYqth2Ty8-k"
       },
       "source": [
-        "data = pd.read_csv('/content/drive/My Drive/Dataset/BAJAS.txt',delimiter='~')\n",
-        " \n",
-        "X  = data.iloc[:,:-1].values\n",
-        "Y  = data.iloc[:,8].values\n",
-        "Y = Y[:,np.newaxis]"
+        "data = pd.read_csv('/content/drive/My Drive/Dataset/M_BAJAS.txt',delimiter='~')\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RbQx30WIGlcX",
-        "outputId": "b3cdb8b9-8cd7-4c5a-d62c-9e7349399190",
+        "outputId": "15508e59-4509-47a0-f6e1-eb582e0d4ec7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 402
+          "height": 343
         }
       },
       "source": [
-        "#data.info()#\n",
-        "#data.describe()\n",
-        "data"
+        "data.head(10)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -147,188 +141,116 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
+              "      <th>ANIO_BAJA</th>\n",
               "      <th>MES_BAJA</th>\n",
-              "      <th>TRIM_1</th>\n",
-              "      <th>TRIM_2</th>\n",
-              "      <th>TRIM_3</th>\n",
-              "      <th>TRIM_4</th>\n",
-              "      <th>ENTRE_1_2_ANIOS</th>\n",
-              "      <th>ENTRE_3_4_ANIOS</th>\n",
-              "      <th>MAS_5_ANIOS</th>\n",
-              "      <th>TOTAL_BAJAS</th>\n",
+              "      <th>FECHA_BAJA</th>\n",
+              "      <th>ANTIGUEDAD</th>\n",
+              "      <th>CANT</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
+              "      <td>2019</td>\n",
               "      <td>11</td>\n",
-              "      <td>35</td>\n",
-              "      <td>19</td>\n",
-              "      <td>22</td>\n",
-              "      <td>153</td>\n",
-              "      <td>484</td>\n",
-              "      <td>294</td>\n",
-              "      <td>11</td>\n",
-              "      <td>1018</td>\n",
+              "      <td>01/11/2019</td>\n",
+              "      <td>1068</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>6</td>\n",
-              "      <td>54</td>\n",
-              "      <td>35</td>\n",
-              "      <td>23</td>\n",
-              "      <td>174</td>\n",
-              "      <td>672</td>\n",
-              "      <td>369</td>\n",
-              "      <td>58</td>\n",
-              "      <td>1384</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>4</td>\n",
+              "      <td>01/04/2020</td>\n",
+              "      <td>860</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2</td>\n",
-              "      <td>39</td>\n",
-              "      <td>19</td>\n",
-              "      <td>32</td>\n",
-              "      <td>343</td>\n",
-              "      <td>925</td>\n",
-              "      <td>511</td>\n",
-              "      <td>22</td>\n",
-              "      <td>1889</td>\n",
+              "      <td>2019</td>\n",
+              "      <td>11</td>\n",
+              "      <td>05/11/2019</td>\n",
+              "      <td>1673</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>3</td>\n",
-              "      <td>48</td>\n",
-              "      <td>24</td>\n",
-              "      <td>25</td>\n",
-              "      <td>240</td>\n",
-              "      <td>736</td>\n",
-              "      <td>424</td>\n",
-              "      <td>38</td>\n",
-              "      <td>1534</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>2</td>\n",
+              "      <td>01/02/2020</td>\n",
+              "      <td>1419</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>10</td>\n",
-              "      <td>29</td>\n",
-              "      <td>15</td>\n",
-              "      <td>17</td>\n",
-              "      <td>134</td>\n",
-              "      <td>470</td>\n",
-              "      <td>294</td>\n",
-              "      <td>19</td>\n",
-              "      <td>978</td>\n",
+              "      <td>2019</td>\n",
+              "      <td>8</td>\n",
+              "      <td>01/08/2019</td>\n",
+              "      <td>782</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>12</td>\n",
-              "      <td>42</td>\n",
-              "      <td>19</td>\n",
-              "      <td>15</td>\n",
-              "      <td>181</td>\n",
-              "      <td>603</td>\n",
-              "      <td>1470</td>\n",
-              "      <td>105</td>\n",
-              "      <td>2435</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>2</td>\n",
+              "      <td>01/02/2020</td>\n",
+              "      <td>602</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
-              "      <td>8</td>\n",
-              "      <td>19</td>\n",
-              "      <td>18</td>\n",
-              "      <td>19</td>\n",
-              "      <td>168</td>\n",
-              "      <td>590</td>\n",
-              "      <td>294</td>\n",
-              "      <td>6</td>\n",
-              "      <td>1114</td>\n",
+              "      <td>2019</td>\n",
+              "      <td>2</td>\n",
+              "      <td>28/02/2019</td>\n",
+              "      <td>391</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
-              "      <td>9</td>\n",
-              "      <td>26</td>\n",
-              "      <td>19</td>\n",
-              "      <td>20</td>\n",
-              "      <td>142</td>\n",
-              "      <td>498</td>\n",
-              "      <td>316</td>\n",
-              "      <td>10</td>\n",
-              "      <td>1031</td>\n",
+              "      <td>2019</td>\n",
+              "      <td>8</td>\n",
+              "      <td>01/08/2019</td>\n",
+              "      <td>784</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
-              "      <td>4</td>\n",
-              "      <td>45</td>\n",
-              "      <td>24</td>\n",
-              "      <td>20</td>\n",
-              "      <td>173</td>\n",
-              "      <td>546</td>\n",
-              "      <td>318</td>\n",
-              "      <td>29</td>\n",
-              "      <td>1153</td>\n",
+              "      <td>2019</td>\n",
+              "      <td>12</td>\n",
+              "      <td>01/12/2019</td>\n",
+              "      <td>606</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
-              "      <td>5</td>\n",
-              "      <td>56</td>\n",
-              "      <td>20</td>\n",
-              "      <td>24</td>\n",
-              "      <td>203</td>\n",
-              "      <td>546</td>\n",
-              "      <td>314</td>\n",
-              "      <td>21</td>\n",
-              "      <td>1183</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>10</td>\n",
+              "      <td>01/10/2019</td>\n",
+              "      <td>298</td>\n",
               "      <td>1</td>\n",
-              "      <td>31</td>\n",
-              "      <td>22</td>\n",
-              "      <td>22</td>\n",
-              "      <td>271</td>\n",
-              "      <td>728</td>\n",
-              "      <td>399</td>\n",
-              "      <td>19</td>\n",
-              "      <td>1491</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>7</td>\n",
-              "      <td>60</td>\n",
-              "      <td>44</td>\n",
-              "      <td>27</td>\n",
-              "      <td>166</td>\n",
-              "      <td>680</td>\n",
-              "      <td>383</td>\n",
-              "      <td>73</td>\n",
-              "      <td>1430</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "    MES_BAJA  TRIM_1  TRIM_2  ...  ENTRE_3_4_ANIOS  MAS_5_ANIOS  TOTAL_BAJAS\n",
-              "0         11      35      19  ...              294           11         1018\n",
-              "1          6      54      35  ...              369           58         1384\n",
-              "2          2      39      19  ...              511           22         1889\n",
-              "3          3      48      24  ...              424           38         1534\n",
-              "4         10      29      15  ...              294           19          978\n",
-              "5         12      42      19  ...             1470          105         2435\n",
-              "6          8      19      18  ...              294            6         1114\n",
-              "7          9      26      19  ...              316           10         1031\n",
-              "8          4      45      24  ...              318           29         1153\n",
-              "9          5      56      20  ...              314           21         1183\n",
-              "10         1      31      22  ...              399           19         1491\n",
-              "11         7      60      44  ...              383           73         1430\n",
-              "\n",
-              "[12 rows x 9 columns]"
+              "   ANIO_BAJA  MES_BAJA  FECHA_BAJA  ANTIGUEDAD  CANT\n",
+              "0       2019        11  01/11/2019        1068     3\n",
+              "1       2020         4  01/04/2020         860     1\n",
+              "2       2019        11  05/11/2019        1673     1\n",
+              "3       2020         2  01/02/2020        1419     1\n",
+              "4       2019         8  01/08/2019         782     1\n",
+              "5       2020         2  01/02/2020         602     1\n",
+              "6       2019         2  28/02/2019         391     4\n",
+              "7       2019         8  01/08/2019         784     1\n",
+              "8       2019        12  01/12/2019         606     1\n",
+              "9       2019        10  01/10/2019         298     1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 124
+          "execution_count": 6
         }
       ]
     },
